// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHero > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container"></div>
</section>"
`;

exports[`PageHero > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <!--v-if-->
      <div data-slot="body" class="mt-10">Body slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with bottom slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container"></div>Bottom slot
</div>"
`;

exports[`PageHero > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="isolate absolute">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container"></div>
</div>"
`;

exports[`PageHero > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`PageHero > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <div data-slot="description" class="text-lg sm:text-xl/8 text-muted text-balance">Description</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <div data-slot="description" class="text-lg sm:text-xl/8 text-muted text-balance">Description slot</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-10">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">Header slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with headline slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">
        <div data-slot="headline" class="mb-4 justify-center">Headline slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with links correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-10">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with links slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-10">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center">Links slot</div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal links correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-10">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container"></div>
</div>"
`;

exports[`PageHero > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">
        <!--v-if-->
        <h1 data-slot="title" class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Title</h1>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container">
    <div data-slot="wrapper" class="text-center">
      <div data-slot="header" class="">
        <!--v-if-->
        <h1 data-slot="title" class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Title slot</h1>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with top slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">Top slot<div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24" data-slot="container"></div>
</div>"
`;

exports[`PageHero > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate">
  <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 max-w-5xl" data-slot="container"></div>
</div>"
`;
